@@ -12,6 +12,7 @@ build_requires:
   Test::More: 0
   Test::NoWarnings: 0
   Test::Output: 0
+  Test::Warn: 0.31
 configure_requires:
   ExtUtils::MakeMaker: 6.59
 distribution_type: module
