@@ -35,6 +35,7 @@ test_requires 'Test::LWP::UserAgent' => 0;
 test_requires 'Test::More' => 0;
 test_requires 'Test::NoWarnings' => 0;
 test_requires 'Test::Output' => 0;
+test_requires 'Test::Warn' => 0.31;
 tests_recursive;
 version '0.04';
 
