@@ -5,31 +5,66 @@ use App::Stow::Check;
 use English;
 use File::Object;
 use File::Spec::Functions qw(abs2rel);
-use Test::More 'tests' => 2;
+use Test::More 'tests' => 5;
 use Test::NoWarnings;
 use Test::Output;
+use Test::Warn;
 
 # Test.
 @ARGV = (
 	'-h',
 );
-my $script = abs2rel(File::Object->new->file('04-run.t')->s);
-# XXX Hack for missing abs2rel on Windows.
-if ($OSNAME eq 'MSWin32') {
-	$script =~ s/\\/\//msg;
-}
-my $right_ret = <<"END";
-Usage: $script [-d stow_dir] [-h] [--version] command
-	-d stow_dir	Stow directory (default value is '/usr/local/stow').
-	-h		Print help.
-	--version	Print version.
-	command		Command for which is stow dist looking.
-END
+my $right_ret = help();
 stderr_is(
 	sub {
 		App::Stow::Check->new->run;
 		return;
 	},
 	$right_ret,
-	'Run help.',
+	'Run help (-h).',
 );
+
+# Test.
+@ARGV = ();
+$right_ret = help();
+stderr_is(
+	sub {
+		App::Stow::Check->new->run;
+		return;
+	},
+	$right_ret,
+	'Run help (no command).',
+);
+
+# Test.
+@ARGV = (
+	'-x',
+);
+$right_ret = help();
+stderr_is(
+	sub {
+		warning_is { App::Stow::Check->new->run; } "Unknown option: x\n",
+			'Warning about bad argument';
+		return;
+	},
+	$right_ret,
+	'Run help (-x - bad option).',
+);
+
+sub help {
+	# Help.
+	my $script = abs2rel(File::Object->new->file('04-run.t')->s);
+	# XXX Hack for missing abs2rel on Windows.
+	if ($OSNAME eq 'MSWin32') {
+		$script =~ s/\\/\//msg;
+	}
+	my $help = <<"END";
+Usage: $script [-d stow_dir] [-h] [--version] command
+	-d stow_dir	Stow directory (default value is '/usr/local/stow').
+	-h		Print help.
+	--version	Print version.
+	command		Command for which is stow dist looking.
+END
+
+	return $help;
+}
